# trl-misalignment

./: .gitignore  README.md  pyproject.toml  sitecustomize.py
docs/: container_restore.md  research_process.md  token_sequence_misalignment_analysis.md
examples/: token_vocab_reward_training.py
scripts/: analyze_misalignment_results.py  analyze_sequence_misalignment.py  analyze_token_sequence_misalignment.py  restore_container_from_yj_data.sh  run_misalignment_ablation.sh  summarize_experiment.py  trl_vllm_serve_compat.py
tests/: test_logprob_engine.py  test_rewards.py  test_sequence_misalignment_diagnostics.py  test_token_sequence_analysis.py
trl_misalignment/: __init__.py  compat.py  metrics.py  rewards.py  serve_vocab_logprobs.py  serve_vocab_reward.py  trainers.py
